# hyperbolic-communities

./: .pre-commit-config.yaml  CONTRIBUTING.md  README (8).md  README.md
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
hyperbolic-communities/: .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
hyperbolic-communities/.github/: PULL_REQUEST_TEMPLATE.md
hyperbolic-communities/.github/workflows/: tests.yml
hyperbolic-communities/examples/scripts/: karate_club_analysis.py
hyperbolic-communities/experiments/reproducibility/: environment.yml
hyperbolic-communities/hyperbolic_communities/: __init__.py
hyperbolic-communities/hyperbolic_communities/core/: hyperbolic_flow.py
hyperbolic-communities/hyperbolic_communities/datasets/: real_networks.py  synthetic_networks.py
hyperbolic-communities/hyperbolic_communities/extraction/: phase_clustering.py  time_averaging.py
hyperbolic-communities/hyperbolic_communities/graph/: graph_communities.py  networkx_integration.py
hyperbolic-communities/hyperbolic_communities/simplicial/: hodge_laplacian.py  persistent_communities.py  simplicial_complex.py
hyperbolic-communities/hyperbolic_communities/utils/: gpu_acceleration.py  sparse_operations.py
hyperbolic-communities/hyperbolic_communities/validation/: community_metrics.py  stability_measures.py  temporal_metrics.py
hyperbolic-communities/tests/unit/: test_hodge_laplacian.py
hyperbolic_communities/core/: community_dynamics.py  parameter_optimization.py  stability_analysis.py
hyperbolic_communities/extraction/: frequency_analysis.py
hyperbolic_communities/simplicial/: boundary_operators.py  multi_dimensional_flow.py
hyperbolic_communities/utils/: data_io.py
hyperbolic_communities/validation/: oscillation_analysis.py
(+3 files in other folders)
